fix: x-axis overflow

--- a/src/components/shared/Response/response.scss
+++ b/src/components/shared/Response/response.scss
@@ -176,6 +176,10 @@
   object-fit: cover;
 }
 
+.gooey-latex > .katex-display {
+  overflow-x: scroll;
+  overflow-y: hidden;
+}
 
 @-webkit-keyframes pulseSize {
 
